test/instance-checks-3.err.expect
test/instance-checks-3.ktn:1:1: error: cannot solve scalar type constraint Int (type of x) = t1 (type var a of example)
test/instance-checks-3.ktn:1:1: note: t1 (type var a of example) is from here
test/instance-checks-3.ktn:1:13: note: Int (type of x) is from here
