test/instance-checks-3.ktn
def example {a}(a -> Int): ->x; x
